fix sharing buttons' bug on iOS

--- a/sass/_article.sass
+++ b/sass/_article.sass
@@ -284,16 +284,15 @@ footer.main-content
     // box
     display: inline-block
     overflow: hidden
-    height: 2.25rem
-    width: 2.25rem
+    height: auto
+    width: auto
   ul.share button
     // posi
     position: relative
     // box
-    height: 100%
-    width: 100%
-    // typo
-    font-size: 1.5rem
+    height: 2.25rem
+    width: 2.25rem
+    overflow: hidden
     // style
     background-color: #000
     border: 0 none
@@ -310,6 +309,8 @@ footer.main-content
       height: 100%
       line-height: 1.6
       text-align: center
+      // typo
+      font-size: 1.4rem
       // style
       color: #fff
     &:hover
