--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -86,6 +86,12 @@ article.layout
       margin-left: .25em
       // display-as
       opacity: .3
+    ul.share
+      // typo
+      text-align: center
+    ul.github
+      // box
+      display: none
   @media #{$small-only}
   @media #{$screen} and (min-width: 40em)
     a.heading-anchor
@@ -98,6 +104,13 @@ article.layout
     margin-left: 16.5em
     // box
     max-width: 38em
+
+    ul.share
+      // typo
+      text-align: left
+    ul.github
+      // box
+      display: block
   @media #{$medium-only}
   @media #{$average-up}
     +calc( 'width', '100% - 17em - 3em' )
